--- a/src/Components/Home/Graph/LeftData/LeftData.css
+++ b/src/Components/Home/Graph/LeftData/LeftData.css
@@ -1,11 +1,8 @@
 .leftdata {
     height: 100%;
+    margin-right: 5px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
-
-/* .leftdata__first {
-    margin-top: 0px;
-} */
